--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "format_hex"
 version = "0.1.0"
 edition = "2021"
-description = "Format an [u8] to a multi-line hexadecimal representation"
+description = "Formats an [u8] to an hexadecimal multiline format, for human readability"
 repository = "https://github.com/flogbl/format_hex"
 license = "MIT"
 exclude = [".gitignore"]
